Change in header

--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Travel Agency</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./resource/styles/style.css">
 </head>
+
 <body>
-   <div class="main">
-    <div class="logo">
-        <img src="./resource/images/Logo.png" alt="image">
-    </div>
-    <div class="nav">
-        <p>Desitnations</p>
-        <p>Hotels</p>
-        <p>Flight</p>
-        <p>Booking</p>
-        <p>Login</p>
-        <button class="signupButton">Sign up</button>
-        <div class="nav-icon">
-            <p>EN&nbsp; &nbsp;</p>
-            <i class="fa-solid fa-angle-down"></i>
+    <div class="main">
+        <div class="logo">
+            <img src="./resource/images/Logo.png" alt="image">
+        </div>
+        <div class="nav">
+            <p>Desitnations</p>
+            <p>Hotels</p>
+            <p>Flight</p>
+            <p>Booking</p>
+            <p>Login</p>
+            <button class="signupButton">Sign up</button>
+            <div class="nav-icon">
+                <p>EN&nbsp; &nbsp;</p>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
         </div>
     </div>
-   </div>
-   <div class="about">
+    <div class="about">
         <div class="titel">
-            <h6>BEST DISTINATION AROUND THE WORLD</h6>
+            <h4>Lets travel India</h4>
             <h1>Travel, <u style="color: red;">enjoy</u><br>and live a new<br>and full life</h1>
-            <h6>Built wicket longer admire do barton vanity itself do in it.<br>preferred to sportsmen it engrossed listening. park gate<br>sell they west hard for the.</h6>
+            <h6>Built wicket longer admire do barton vanity itself do in it.<br>preferred to sportsmen it engrossed
+                listening. park gate<br>sell they west hard for the.</h6>
             <div class="button">
                 <span class="more">Fint out more</span>
                 <span class="play-button">
@@ -129,7 +136,8 @@
         </div>
         <div class="costumber-comments">
             <img src="./resource/images/Image_2.png" alt="">
-            <p class="comments">“On the Windows talking painted pasture yet its<br>express parties use. Sure last upon he same as<br>knew next. Of believed or diverted no.”</p>
+            <p class="comments">“On the Windows talking painted pasture yet its<br>express parties use. Sure last upon
+                he same as<br>knew next. Of believed or diverted no.”</p>
             <div class="mike">
                 <h3>Mike taylor</h3>
                 <p>Lahore, Pakistan</p>
@@ -155,7 +163,8 @@
             <input type="email" placeholder="Your email" />
              -->
             <div class="input-container">
-                <span class="icon"><i class="fa-regular fa-envelope"></i></span> <!-- You can use an icon font or an image here -->
+                <span class="icon"><i class="fa-regular fa-envelope"></i></span>
+                <!-- You can use an icon font or an image here -->
                 <input type="text" placeholder="Your email">
                 <button type="submit">Subscribe</button>
             </div>
@@ -191,4 +200,5 @@
     <p class="last-para">All rights reserved@jadoo.co</p>
 
 </body>
+
 </html>
